# microui-rs

./: Cargo.toml  README.md
docs/: porting-notes.md
docs/superpowers/plans/: 2026-06-18-microui-rust-port.md
docs/superpowers/specs/: 2026-06-18-microui-rust-port-design.md
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs  main.rs
examples/basic/tests/: pixel_snapshot.rs
examples/basic/tests/fixtures/: snapshot.raw
src/: command.rs  constants.rs  context.rs  input.rs  lib.rs  pool.rs  storage.rs  types.rs
tests/: commands.rs  primitives.rs  smoke.rs  storage_and_pool.rs
tests/common/: mod.rs
tests/fixtures/: primitives.txt  smoke.txt
tools/oracle/: primitives.c  smoke.c
